# holpy

./: __init__.py  pyproject.toml
app/: integral.py
app/src/components/integral/: CaseProof.vue
data/: bitvector.py
data/tests/: bitvector_test.py
holsmt/: Cargo.toml  README.md  build.rs  clippy.toml  holrs.pyi  note.md  pyproject.toml
holsmt/holrs/: __init__.py  _reexport.py  exceptions.py  holrs.pyi  other_python_file.py  term.py
holsmt/py_tests/: call_type.py  term_test.py  type_test.py
holsmt/src/: lib.rs
holsmt/src/ast/: error.rs  mod.rs  pool.rs  printer.rs  rc.rs  term.rs  utils.rs
holsmt/src/parser/: mod.rs  parser.lalrpop  parser.rs
holsmt/src/python/: error.rs  mod.rs  pyterm.rs  pytype.rs
integral/: calc.py  compstate.py  conditions.py  condprover.py  context.py  expr.py  interval.py  latex.py  limits.py  norm.py  parser.py  poly.py  rules.py  run_slagle.py  slagle.py  solve.py  sympywrapper.py
integral/examples/: AhmedIntegral.json  BernoulliIntegral.json  BetaWallis.json  CatalanConstant01.json  CatalanConstant02.json  Chapter3Practice01.json  Chapter3Practice02.json  Chapter3Practice03.json  Chapter3Practice04.json  Chapter3Practice05.json  Chapter3Practice06.json  Chapter3Practice07.json  Chapter3Practice08.json  Chapter3Practice09.json  Exponential.json  FrullaniIntegral.json  GammaFunction.json  LogFunction01.json  LogFunction02.json  Trigonometric.json  base.json  chapter1_practice01_01.json  chapter2_practice01.json  chapter2_practice02.json  chapter2_practice05.json  chapter4_practice01.json  chapter4_practice02.json  chapter4_practice03.json  coxeter.json  dirichletIntegral.json  easy01.json  easy02.json  easy03.json  easy04.json  easy06.json  elementary_log.json  elmentary_log.json  euler_log_sin.json  euler_log_sin02.json  euler_log_sin05.json  (+21 more)
integral/tests/: conditions_test.py  condprover_test.py  expr_test.py  integral_test.py  limits_test.py  poly_test.py  rules_test.py  sympywrapper_test.py
kernel/: term.py  theory.py
kernel/tests/: term_test.py
smt/tests/: verit_macro_test.py
smt/veriT/: bugs.txt  command.py  interface.py  proof_parser.py  proof_rec.py  run_smt_file.py  verit_bugs.txt  verit_macro.py
smt/veriT/example/BV/unsat/: Prim_4.smt2  bitcount16.smt2  bitcount32.smt2  bvnor.smt2  bvsmod.smt2  ex2_prime.smt2  ex7_prime.smt2  inf6.smt2  (+8 more)
smt/veriT/tests/: parser_test.py  proofrec_test.py
syntax/: settings.py
zfc/: zfc.py  zfc_parser.py
zfc/tests/: parser_test.py  zfc_test.py
