[project]
name = "holpy"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools]
packages = ["holpy.kernel", "holpy.logic", "holpy.library", "holpy.prover", "holpy.data"]

[tool.setuptools.package-dir]
# mypkg.module corresponds to lib/module.py
"holpy.kernel" = "kernel"
"holpy.logic" = "logic"
"holpy.library" = "library"
"holpy.prover" = "prover"
"holpy.data" = "data"
