[package]
name = "holrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "holrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.2"
ahash = "0.8.3"
thiserror = "1.0.40"
# print colored text
# termion = "*"