[package]
name = "holrs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "holrs"
crate-type = ["cdylib"]

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
num-bigint = "0.4.2"
pyo3 = { version = "0.19.2", features = ["num-bigint"]}
ahash = "0.8.3"
thiserror = "1.0.40"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
regex = "1.0"
rug = { version = "1.19.2", features = ["integer", "rational"] }
# print colored text
# termion = "*"

# [profile.release]
# lto = "fat"
# codegen-units = 1
# opt-level = 3